2011-01-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revert-unchanged-files): call
	`vc-resynch-buffer' before checking if the file is modified.

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-get-attribute): new function

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
	* vc-clearcase.el (clearcase-revert-unchanged-files): new function

	* ucm.el (ucm-actb-show-diff, ucm-actb-revert-command): don't use
	`find-file-noselect', instead use `vc-clearcase-registered'.
	(ucm-actb-checkin-command, ucm-checkin-activity): use
	`clearcase-revert-unchanged-files'

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop): check that the supplied
	DIR param is actually inside this view.  Also set the ROOT-PATH
	slot.
	(clearcase-get-vprop): use `error' instead of `assert'
	(vc-clearcase-start-view): try to create a VPROP for the view that
	was started.

2010-11-10  Michael Albinus  <michael.albinus@gmx.de>

	* vc-clearcase.el (clearcase-dir-status-collect, vc-clearcase-diff):
	Do not use `kill-line' or `kill-region', they trash the kill ring.

2010-11-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-known-vobs)
	(clearcase-view-info-for-path-cache): new variables
	(clearcase-view-info-for-path, clearcase-view-tag-for-path)
	(clearcase-vob-tag-for-path, clearcase-view-root-for-path): new
	functions
	(clearcase-setup-vprop): use `clearcase-view-root-for-path'
	(vc-clearcase-responsible-p): we are responsible for a file if we
	can find a vob tag for it (fixes Bug #8)
	(vc-clearcase-root): use `clearcase-view-root-for-path'

2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-visit-item-command): open the file using the
	full path, instead of the directory name.

2010-09-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): ignore backup
	files
